# homog_dependencies

./: .gitignore  catkin_ws_install.sh  catkin_ws_uninstall.sh  catkin_ws_uninstall.sh~  dbBackup.sh  i2.sh  install.sh  install.sh~  newUser.sh  openCV_install.sh  openCV_install.sh~  possible_issues.txt  ros_install.sh  ros_install.sh~  t1.sh  t2.sh  test.sh  uninstall.sh  uninstall_db.sh
databases/: esm.backup  esm.db  findMatch  findMatch.backup  findMatch.db  findOnly.backup  findOnly.db
dbFiles/: pg_hba.conf  postgresql.conf
homest-1.4/: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.icc  Makefile.vc  README.txt  cmake_install.cmake  hdemo  homest.c  homest.c~  homest.h  homest_demo  homest_demo.c  homest_demo2.cpp  lqs.c  lqs.h
homest-1.4/matlab/: Makefile  Makefile.w32
homest-1.4/test/: matches.txt
levmar-2.6/: CMakeCache.txt  Makefile  cmake_install.cmake  lmdemo
relNavScripts/installation/Environment/: bashrc  rosrc  vimrc
relNavScripts/installation/Programs/: install_google_chrome.sh  install_qtcreator.sh  install_spotify  install_sublime.sh
relNavScripts/installation/Themes/: themes.sh
relNavScripts/ros_videos/: player.py  rosbag_to_csv.py  saveDepth.py
relNavScripts/svntogit/: users.txt
relNavScripts/test_hydro_vs_fuerte/: calculate_hydro_commands.launch  hover_wait_plot.sh
relNavScripts/vim/: .vimrc
scripts/: create_catkin_ws.sh  database_install.sh  git_repos.sh  grep  install.sh  libraries_install.sh  mavlink.sh  mavros  newUser.sh  notes  openCV_install.sh  ros_install.sh  test.sh  testdir.yaml  vars.sh
